--- a/MusicApp/Search/Common/TrackCell.xib
+++ b/MusicApp/Search/Common/TrackCell.xib
@@ -40,9 +40,19 @@
                         <color key="textColor" red="0.4941176471" green="0.4941176471" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P8a-1Z-Rv8">
+                        <rect key="frame" x="365" y="20" width="44" height="44"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                        <color key="tintColor" red="0.91927522419999996" green="0.20047950740000001" blue="0.384311974" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <state key="normal" image="Add"/>
+                        <connections>
+                            <action selector="addTrackAction" destination="H8w-Lx-vcg" eventType="touchUpInside" id="fbB-SX-uD9"/>
+                        </connections>
+                    </button>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="addTrack" destination="P8a-1Z-Rv8" id="t41-5I-7eW"/>
                 <outlet property="artistName" destination="FnF-8i-Hcj" id="nyZ-hd-hfh"/>
                 <outlet property="collectionName" destination="dVo-U0-84T" id="JIJ-as-52f"/>
                 <outlet property="trackImageView" destination="lpb-Ju-O16" id="GCR-0D-Cpb"/>
@@ -51,4 +61,7 @@
             <point key="canvasLocation" x="179.71014492753625" y="10.714285714285714"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Add" width="16" height="16"/>
+    </resources>
 </document>
